docs : update swaggo documentation
