# docs/swagger.json
@@ -20,6 +20,7 @@
                 "tags": [
                     "login"
                 ],
+                "summary": "Login registered user",
                 "parameters": [
                     {
                         "description": "Input email and password",
@@ -65,6 +66,7 @@
                 "tags": [
                     "Register"
                 ],
+                "summary": "Register new user",
                 "parameters": [
                     {
                         "description": "Input email and password new user",
@@ -98,8 +100,13 @@
                 }
             }
         },
-        "/histories/{user_id}": {
+        "/histories": {
             "get": {
+                "security": [
+                    {
+                        "JWTtoken": []
+                    }
+                ],
                 "description": "Get all list histories from a user",
                 "produces": [
                     "application/json"
@@ -107,22 +114,7 @@
                 "tags": [
                     "Histories"
                 ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "get all list histories, by user id",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
+                "summary": "Get histories user",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -145,7 +137,7 @@
                 }
             }
         },
-        "/movies/": {
+        "/movies": {
             "get": {
                 "description": "Get popular movies, filter movies by title or genres",
                 "produces": [
@@ -155,6 +147,7 @@
                 "tags": [
                     "Movies"
                 ],
+                "summary": "filter movies by genres, title and pagination",
                 "parameters": [
                     {
                         "type": "integer",
@@ -210,6 +203,7 @@
                 "tags": [
                     "Movies"
                 ],
+                "summary": "Get popular movies",
                 "parameters": [
                     {
                         "type": "integer",
@@ -249,6 +243,7 @@
                 "tags": [
                     "Movies"
                 ],
+                "summary": "Get upciming movies",
                 "parameters": [
                     {
                         "type": "integer",
@@ -288,6 +283,7 @@
                 "tags": [
                     "Movies"
                 ],
+                "summary": "Get details from a movie",
                 "parameters": [
                     {
                         "type": "string",
@@ -321,6 +317,11 @@
         },
         "/schedules/{movieid}": {
             "get": {
+                "security": [
+                    {
+                        "JWTtoken": []
+                    }
+                ],
                 "description": "Get schedules movie, for a movie",
                 "produces": [
                     "application/json"
@@ -328,19 +329,13 @@
                 "tags": [
                     "Schedules"
                 ],
+                "summary": "Get schedule for a movie",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "get schedule by this id movie",
                         "name": "movieid",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -368,6 +363,11 @@
         },
         "/seats/{schedule_id}": {
             "get": {
+                "security": [
+                    {
+                        "JWTtoken": []
+                    }
+                ],
                 "description": "Get seat that booked  from a movie get by schedule id",
                 "produces": [
                     "application/json"
@@ -375,6 +375,7 @@
                 "tags": [
                     "Seats"
                 ],
+                "summary": "Get Booked seat",
                 "parameters": [
                     {
                         "type": "string",
@@ -406,8 +407,48 @@
                 }
             }
         },
-        "/users/update/{user_id}": {
-            "post": {
+        "/users/": {
+            "get": {
+                "security": [
+                    {
+                        "JWTtoken": []
+                    }
+                ],
+                "description": "Get details user, gt data by known id user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "get profile user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserDetailResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "JWTtoken": []
+                    }
+                ],
                 "description": "Update user and show new updated data",
                 "produces": [
                     "application/json"
@@ -415,23 +456,10 @@
                 "tags": [
                     "Profile"
                 ],
+                "summary": "Update registerd user",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "get user_id for select which user will update",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Data film",
+                        "description": "Data new user",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -462,53 +490,6 @@
                 }
             }
         },
-        "/users/{user_id}": {
-            "get": {
-                "description": "Get details user, gt data by known id user",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Profile"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "get detail movie by id movie",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.UserDetailResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/{any}": {
             "get": {
                 "description": "if route not found, send 404 statusNotfound as response",
@@ -518,6 +499,7 @@
                 "tags": [
                     "NoRoute"
                 ],
+                "summary": "testing display for no route",
                 "responses": {
                     "404": {
                         "description": "Not Found",
@@ -1010,6 +992,9 @@
                 "role": {
                     "type": "string"
                 },
+                "updated_at": {
+                    "type": "string"
+                },
                 "user_id": {
                     "type": "integer"
                 }
@@ -1031,6 +1016,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWTtoken": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
